src/test/resources/compiler/parser/input/pass/damplistagingtargetoptionl.rule
pre -> +post1 action [0,0,,0,0].