src/test/resources/compiler/parser/input/fail/incomplet_damplist.rule
pre -> +post1 +post2 action [0,0].